--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.19",
+    "@types/react": "^17.0.0",
+    "autoprefixer": "^10.1.0",
+    "postcss": "^8.2.2",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
   }
 }
