--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@tailwindcss/typography": "^0.3.1",
+    "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
     "react": "16.13.1",
